--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,11 @@ h1 {
 }
 
 #wrapper {
-  width: device-width;
+  width: 100%;
 }
 
 #map {
-  width: device-width;
+  width: 100%;
   margin: 0 auto;
   height: 100%;
 }
