--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @import url(//fonts.googleapis.com/css?family=Open+Sans);
 
+html {
+  height: 100%;
+}
+
+
 body {
   margin: 0px;
   font-family: 'Open Sans', Helvetica, sans-serif;
