--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  margin: 0px;
+  margin: auto;
   font-family: 'Open Sans', Helvetica, sans-serif;
 }
 
@@ -25,7 +25,7 @@ h1 {
   margin-bottom: 0px;
   margin-left: 10px;
   color: #3173D8;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: lighter;
 }
 
@@ -65,7 +65,7 @@ h1 {
 #credits p {
   margin-top: 5px;
   margin-right: 4px;
-  font-size: 8px;
+  font-size: 10px;
   text-align: right;
   line-height: 2px;
 }
