--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url(//fonts.googleapis.com/css?family=Open+Sans);
+
+html {
+  height: 100%;
 }
 
 body {
@@ -12,7 +16,7 @@ img {
 
 p {
   font-size: 12px;
-  line-height: 2px;
+  line-height: 10px;
 }
 
 h1 {
@@ -21,7 +25,7 @@ h1 {
   margin-bottom: 0px;
   margin-left: 10px;
   color: #3173D8;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: lighter;
 }
 
@@ -32,7 +36,7 @@ h1 {
 #map {
   width: 100%;
   margin: 0 auto;
-  map: 800px;
+  height: 800px;
 }
 
 #controls {
@@ -61,7 +65,7 @@ h1 {
 #credits p {
   margin-top: 5px;
   margin-right: 4px;
-  font-size: 8px;
+  font-size: 10px;
   text-align: right;
   line-height: 2px;
 }
