--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 
 img {
   float: left;
+  padding-left: 10px;
   padding-right: 10px;
 }
 
@@ -64,7 +65,6 @@ h1 {
 
 #credits p {
   margin-top: 5px;
-  margin-right: 4px;
   font-size: 8px;
   text-align: right;
   line-height: 2px;
