--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ h1 {
   font-weight: lighter;
 }
 
+#dialog {
+  font-size: 10px;
+  font-family: 'Open Sans', Helvetica, sans-serif;
+
 #wrapper {
   width: 100%;
 }
