--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ h1 {
 
 #dialog {
   font-size: 10px;
-  font-family: 'Open Sans', Helvetica, serif;
+  font-family: 'Open Sans', Roboto, sans-serif;
 }
 
 
