--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,11 @@ h1 {
   font-weight: lighter;
 }
 
+label {
+  font-size: 12px;
+  font-family: 'Open Sans', Roboto, sans-serif;
+  font-weight: bold;
+
 #dialog {
   font-size: 12px;
   font-family: 'Open Sans', Roboto, sans-serif;
