--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ label {
   font-size: 12px;
   font-family: 'Open Sans', Roboto, sans-serif;
   font-weight: bold;
+}  
 
 #dialog {
   font-size: 12px;
