--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(//fonts.googleapis.com/css?family=Open+Sans);
+
 body {
   margin: 0px;
   font-family: 'Open Sans', Helvetica, sans-serif;
@@ -6,53 +7,36 @@ body {
 
 img {
   float: left;
-  padding-left: 10px;
   padding-right: 10px;
 }
 
 p {
-  font-size: 12px;
-  line-height: 10px;
+  font-size: 15px;
+  line-height: 25px;
 }
 
 h1 {
-  line-height: 35px;
-  margin-top: 4px;
+  line-height: 60px;
+  margin-top: 0px;
   margin-bottom: 0px;
-  margin-left: 10px;
+  margin-left: 4px;
   color: #3173D8;
-  font-size: 40px;
   font-weight: lighter;
 }
 
-label {
-  font-size: 12px;
-  font-family: 'Open Sans', Roboto, sans-serif;
-  font-weight: bold;
-}  
-
-#dialog {
-  font-size: 12px;
-  font-family: 'Open Sans', Roboto, sans-serif;
-}
-
-
 #wrapper {
-  width: 100%;
+  width: 99%;
 }
 
 #map {
-  width: 100%;
+  width: 99%;
   margin: 0 auto;
-  height: 800px;
+  height: 780px;
 }
 
 #controls {
   width: 100%;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-bottom: 4px;
-  font-size: 12px;
+  margin: 0 auto;
   float: left;
 }
 
@@ -71,8 +55,8 @@ label {
 }
 
 #credits p {
-  margin-top: 5px;
-  font-size: 10px;
+  margin-top: 1px;
+  font-size: 8px;
   text-align: right;
-  line-height: 2px;
+  line-height: 10px;
 }
