--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Open+Sans);
+@import url(//fonts.googleapis.com/css?family=Mallanna));
 
 html {
   height: 100%;
@@ -6,7 +6,7 @@ html {
 
 body {
   margin: 0px;
-  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-family: 'Open Sans', Mallanna, sans-serif;
 }
 
 img {
