--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,13 @@ h1 {
 
 label {
   font-size: 12px;
-  font-family: 'Open Sans', Roboto, sans-serif;
+  font-family: 'Open Sans', Mallanna, sans-serif;
   font-weight: bold;
 }  
 
 #dialog {
   font-size: 12px;
-  font-family: 'Open Sans', Roboto, sans-serif;
+  font-family: 'Open Sans', Mallanna, sans-serif;
 }
 
 
