--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h1 {
   margin-bottom: 10px;
   margin-left: 10px;
   color: #3173D8;
+  font-family: 'Open Sans', Mallanna, sans-serif;  
   font-size: 40px;
   font-weight: lighter;
 }
@@ -47,7 +48,7 @@ label {
 #map {
   width: 100%;
   margin: 0 auto;
-  height: 815px;
+  height: 818px;
 }
 
 #controls {
