--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ h2 {
   line-height: 25px;
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;  
   text-align: center;
   font-size: 20px;
   color: #3086B5;
