--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Mallanna));
+@import url(//fonts.googleapis.com/css?family=Mallanna);
 
 html {
   height: 100%;
