--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ h1 {
   margin-top: 15px;
   margin-bottom: 10px;
   margin-left: 10px;
+  text-align: center;
   color: #3173D8;
   font-size: 40px;
   font-weight: lighter;
@@ -37,6 +38,7 @@ h2 {
   margin-left: 10px;
   margin-right: 10px;  
   font-size: 15px;
+  text-align: center;
   color: #3086B5;
   font-weight: lighter;
 }
