--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ p {
 }
 
 h1 {
-  line-height: 15px;
+  line-height: 20px;
   margin-top: 15px;
   margin-bottom: 10px;
   margin-left: 10px;
@@ -71,6 +71,7 @@ label {
   margin-bottom: 10px;
   font-family: 'Open Sans', Mallanna, sans-serif;  
   font-size: 12px;
+  text-align: center;
   float: left;
 }
 
